[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/Run0.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/Run4.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/Run2.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/Jump1.png" type="Texture" id=5]
[ext_resource path="res://assets/Player/Run3.png" type="Texture" id=6]
[ext_resource path="res://assets/Player/Idle0.png" type="Texture" id=7]
[ext_resource path="res://assets/Player/Run1.png" type="Texture" id=8]
[ext_resource path="res://assets/Player/Run7.png" type="Texture" id=9]
[ext_resource path="res://assets/Sons/jump-02.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/Sons/step.wav" type="AudioStream" id=11]




[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 9 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.9208
height = 28.9335

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.05951, 1.0863 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 14.7503
height = 27.9698

[node name="Player" type="KinematicBody2D"]
position = Vector2( 366.175, 195.613 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="Shape_principal" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.08676 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )
limit_top = -100
limit_bottom = 1000
smoothing_enabled = true

[node name="Pes" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Shape" type="CollisionShape2D" parent="Pes"]
position = Vector2( 0, 32 )
shape = SubResource( 3 )

[node name="Dano" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Shape" type="CollisionShape2D" parent="Dano"]
position = Vector2( 0, 3.08676 )
shape = SubResource( 4 )

[node name="JumpFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="RunFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
[connection signal="body_entered" from="Pes" to="." method="_on_Pes_body_entered"]
[connection signal="body_entered" from="Dano" to="." method="_on_Dano_body_entered"]
